--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -17,21 +17,21 @@
 
     <form [formGroup]="contactForm" (ngSubmit)="submitForm(contactForm.value)">
       <div class="form-group material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['name'].valid && contactForm.controls['name'].touched}">
-        <input class="form-control material-input" type="text" placeholder="{{'contact.form.name' | translate}}" [formControl]="contactForm.controls['name']">
+        <input class="form-control material-input" maxlength="101" type="text" placeholder="{{'contact.form.name' | translate}}" [formControl]="contactForm.controls['name']">
 
         <div *ngIf="contactForm.controls['name'].hasError('required') && contactForm.controls['name'].touched" class="alert alert-danger">{{'contact.form.name.validation' | translate}}</div>
         <div *ngIf="contactForm.controls['name'].hasError('minlength') && contactForm.controls['name'].touched" class="alert alert-danger">{{'contact.form.name.validation.length' | translate}}</div>
         <div *ngIf="errors.name" class="alert alert-danger">{{errors.name}}</div>
       </div>
       <div class="form-group  material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['email'].valid && contactForm.controls['email'].touched}">
-        <input class="form-control material-input" type="email" placeholder="{{'contact.form.email' | translate}}" [formControl]="contactForm.controls['email']">
+        <input class="form-control material-input" maxlength="256" type="email" placeholder="{{'contact.form.email' | translate}}" [formControl]="contactForm.controls['email']">
 
         <div *ngIf="contactForm.controls['email'].hasError('required') && contactForm.controls['email'].touched" class="alert alert-danger">{{'contact.form.email.validation' | translate}}</div>
         <div *ngIf="contactForm.controls['email'].hasError('minlength') && contactForm.controls['email'].touched" class="alert alert-danger">{{'contact.form.email.validation.length' | translate}}</div>
         <div *ngIf="errors.email" class="alert alert-danger">{{errors.email}}</div>
       </div>
       <div class="form-group  material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['message'].valid && contactForm.controls['message'].touched}">
-        <textarea class="form-control material-input" autosize type="text" placeholder="{{'contact.form.message' | translate}}" [formControl]="contactForm.controls['message']"></textarea>
+        <textarea class="form-control material-input" maxlength="1000" autosize type="text" placeholder="{{'contact.form.message' | translate}}" [formControl]="contactForm.controls['message']"></textarea>
 
         <div *ngIf="contactForm.controls['message'].hasError('required') && contactForm.controls['message'].touched" class="alert alert-danger">{{'contact.form.message.validation' | translate}}</div>
         <div *ngIf="contactForm.controls['message'].hasError('minlength') && contactForm.controls['message'].touched" class="alert alert-danger">{{'contact.form.message.validation.length' | translate}}</div>
