Removal of the translation item component since it is not used anymore

--- a/src/app/components/job-preview/job-preview.component.html
+++ b/src/app/components/job-preview/job-preview.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-7 col-md-8">
     <div class="job-info-row border">
-      <i class="fa fa-file-text-o fa-lg"></i> <translation-item [text]="job.description" [translation]="job.translated.description"></translation-item>
+      <i class="fa fa-file-text-o fa-lg"></i> {{job.description}}
     </div>
   </div>
 
