error component refactoring

--- a/src/app/views/error/error.component.html
+++ b/src/app/views/error/error.component.html
@@ -1,5 +1,11 @@
-<div class="container-fluid">
-  <p>
-    {{'common.error' | translate}}
-  </p>
+<div class="error-container">
+
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{ 'error.title' | translate }}</h3>
+  </div>
+
+  <div class="error-description">
+    {{ 'error.description' | translate}}
+  </div>
+
 </div>
