cookies about refactoring

--- a/src/app/views/cookies-about/cookies-about.component.html
+++ b/src/app/views/cookies-about/cookies-about.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid">
+<div class="cookies-about-container">
 
   <div class="sub-header-container">
     <h3 class="sub-header-title">{{ 'cookies.info.title' | translate }}</h3>
   </div>
 
-  <div class="cookies-about-container row">
-    <p class="fs-m0">{{ 'cookies.info.description' | translate}}</p>
+  <div class="cookies-about-description">
+    {{ 'cookies.info.description' | translate}}
   </div>
 
 </div>
