remove all html occurences of "container-fluid"

--- a/src/app/views/404/404.component.html
+++ b/src/app/views/404/404.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid not-found-component-wrapper">
+<div class="not-found-component-wrapper">
   <h1 class="col-xs-12 not-found-component-text">
     {{'page_not_found_error.header' | translate}}
   </h1>
