--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div>
   <div class="home-header">
     <img class="home-header-map-image" src="/assets/images/startpagemap.png" alt="Map" />
     <div class="home-header-info-container home-header-info-container-logged-in" *ngIf="user">
