--- a/src/app/views/jobs/jobs.component.html
+++ b/src/app/views/jobs/jobs.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div>
   <div class="sub-header-container">
     <h3 class="sub-header-title">{{'common.all_jobs' | translate: {nbrOfJobs: totalJobs} }}</h3>
   </div>
