--- a/src/app/views/my-jobs/my-jobs.component.html
+++ b/src/app/views/my-jobs/my-jobs.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div>
 
   <div class="sub-header-container">
     <h3 class="sub-header-title">{{"menu.main.my_assignment" | translate}}</h3>
