--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div>
 
   <div class="sub-header-container">
     <h3 class="sub-header-title">{{"contact" | translate}}</h3>
