--- a/src/app/views/faq/faq.component.html
+++ b/src/app/views/faq/faq.component.html
@@ -5,7 +5,7 @@
   <ul class="faq-list-container">
     <li class="faq-list-item" *ngFor="let faq of faqs">
       <input class="faq-list-item-checkbox" type="checkbox" checked>
-      <div class="faq-list-item-dropdown-icon"></div>
+      <i class="faq-list-item-dropdown-icon"></i>
       <div class="faq-item-question-container">
         {{faq.question}}
       </div>
