--- a/src/app/views/404/404.component.html
+++ b/src/app/views/404/404.component.html
@@ -1,8 +1,11 @@
-<div class="not-found-component-wrapper">
-  <h1 class="col-xs-12 not-found-component-text">
-    {{'page_not_found_error.header' | translate}}
-  </h1>
-  <h3 class="col-xs-12 not-found-component-text">
-    {{'page_not_found_error.subtitle' | translate}} 😞
+<div class="not-found-container">
+
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{'page.not.found.error.title' | translate}}</h3>
+  </div>
+
+  <h3 class="not-found-description">
+    {{'page.not.found.error.description' | translate}} 😞
   </h3>
+
 </div>
