--- a/src/app/views/reset-password/reset-password.component.html
+++ b/src/app/views/reset-password/reset-password.component.html
@@ -8,7 +8,7 @@
 
     <form [formGroup]="resetPasswordForm" (ngSubmit)="submitForm(resetPasswordForm.value)">
       <div class="form-group material-group reset-password-input-container" [ngClass]="{'has-error':!resetPasswordForm.controls['password'].valid && resetPasswordForm.controls['password'].touched}">
-        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="reset-password-form-text-input form-control material-input fs-m0" type="password" placeholder="{{'reset.password.form.password.placeholder' | translate}}" [formControl]="resetPasswordForm.controls['password']">
+        <input maxlength="50" (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="reset-password-form-text-input form-control material-input fs-m0" type="password" placeholder="{{'reset.password.form.password.placeholder' | translate}}" [formControl]="resetPasswordForm.controls['password']">
 
         <div *ngIf="resetPasswordForm.controls['password'].hasError('required') && resetPasswordForm.controls['password'].touched" class="alert alert-danger">{{'reset.password.form.password.validation.required' | translate}}</div>
         <div *ngIf="resetPasswordForm.controls['password'].hasError('minlength')" class="alert alert-danger">{{'reset.password.form.password.validation.min.length' | translate}}</div>
