Force navbar to not overflow on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,11 +125,12 @@ body {
 .navbar-fixed-top > .navbar-container,
 body > .app-container {
   height: 100%;
-  margin: 0 auto;
   @media screen and (min-width: $lg-device-width) {
     width: $lg-device-width;
+    margin: 0 auto;
   }
   @media screen and (max-width: $lg-device-width) {
     width: 100%;
+    max-width: 100vw;
   }
 }
