--- a/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -43,7 +43,7 @@ $disabled-background-color: #eeeeee;
   }
 
   .dropdown-items-list {
-    min-width: 100%;
+    width: 100%;
     height: auto;
     max-height: 426px;
     overflow-x: hidden;
